# claude-lab

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.json
.claude/commands/: test-status.md
backend/: config.py  main.py
frontend/: .gitignore
frontend/src/: App.jsx
hooks/: debug_event.py  log_tool_calls.py
mcp_servers/: notes_server.py
notes/: ideas_ai_training.md  m0.3-notes.md  meeting_2026_04_24.md  research_mcp.md  scratch.md  test_mcp.md
project-b/training-one-pager/: facilitator_guide.docx  participant_workbook.docx  training_deck.pptx
scratch/: test_node.js
scripts/: agent_demo.py  async_demo.py  beta_tool_demo.py  claude_cli.py  claude_tools.py  env_demo.py  goodbye.py  hello.py  logging_demo.py  pydantic_demo.py  structured_extraction_demo.py  subagent_demo.py  summarize_notes.py  tool_use_demo.py
tests/: __init__.py  conftest.py  test_agent_loop.py  test_env_demo.py  test_pydantic_demo.py  test_tools.py
