[project]
name = "claude-lab"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.97.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
